gen/oslogin/v1alpha/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-oslogin1_alpha v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/oslogin/v1alpha/lib)
error[E0433]: failed to resolve: unresolved import
   --> gen/oslogin/v1alpha/lib/src/lib.rs:806:50
    |
806 |             operating_system_type: Option<crate::projects::params::DeleteOperatingSystemType>,
    |                                                  ^^^^^^^^
    |                                                  |
    |                                                  unresolved import
    |                                                  help: a similar path exists: `crate::users::projects`

error[E0433]: failed to resolve: unresolved import
   --> gen/oslogin/v1alpha/lib/src/lib.rs:823:31
    |
823 |                 value: crate::projects::params::DeleteOperatingSystemType,
    |                               ^^^^^^^^
    |                               |
    |                               unresolved import
    |                               help: a similar path exists: `crate::users::projects`

error[E0423]: expected value, found struct `projects::ProjectsActions`
   --> gen/oslogin/v1alpha/lib/src/lib.rs:438:13
    |
438 |             projects::ProjectsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `projects::ProjectsActions { /* fields */ }`?

error[E0423]: expected value, found struct `ssh_public_keys::SshPublicKeysActions`
   --> gen/oslogin/v1alpha/lib/src/lib.rs:442:13
    |
442 |             ssh_public_keys::SshPublicKeysActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `ssh_public_keys::SshPublicKeysActions { /* fields */ }`?

warning: unreachable expression
   --> gen/oslogin/v1alpha/lib/src/lib.rs:370:17
    |
370 | /                 Ok(match value {
371 | |                     _ => {
372 | |                         return Err(::serde::de::Error::custom(format!(
373 | |                             "invalid enum for #name: {}",
...   |
376 | |                     }
377 | |                 })
    | |__________________^
    |
    = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
   --> gen/oslogin/v1alpha/lib/src/lib.rs:764:21
    |
764 | /                     Ok(match value {
765 | |                         _ => {
766 | |                             return Err(::serde::de::Error::custom(format!(
767 | |                                 "invalid enum for #name: {}",
...   |
770 | |                         }
771 | |                     })
    | |______________________^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-oslogin1_alpha`.

To learn more, run the command again with --verbose.
